fix lack of code scrolling on small viewports

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,7 @@ p, li {
 pre {
     border-radius: var(--border-radius);
     padding: 1rem;
+    overflow-x: auto;
 }
 
 .page-title {
